--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "rewrites": [
-    { "source": "/", "destination": "/index.html" }
+  "routes": [
+    { "src": "/", "dest": "/index.html" },
+    { "src": "/dashboard", "dest": "/dashboard.html" }
   ]
 }
