--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "routes": [
-    { "src": "/", "dest": "/index.html" },
-    { "src": "/dashboard", "dest": "/dashboard.html" }
+    { "src": "^/$", "dest": "/index.html" },
+    { "src": "^/dashboard$", "dest": "/dashboard.html" }
   ]
 }
